--- a/electro_e/customer/templates/base.html
+++ b/electro_e/customer/templates/base.html
@@ -79,7 +79,7 @@ https://templatemo.com/tm-571-hexashop
                         </button>
 
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
-                            <ul class="navbar-nav">
+                            <ul class="navbar-nav mx-5">
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'home' %}">{% trans 'HOME' %}</a>
                                 </li>
